@@ -215,12 +215,20 @@ void MainWindow::on_about()
 	dialog.set_transient_for(*this);
 	dialog.set_name("grop");
 	dialog.set_logo_default();
-	dialog.set_version("Version " PACKAGE_VERSION);
+	dialog.set_version("Version " PACKAGE_VERSION " (" RELEASEDATE ")");
 	dialog.set_comments("Graphic interface of porg,\na source code package organizer");
 	dialog.set_authors(std::vector<Glib::ustring>(1, "David Ricart"));
 	dialog.set_website(PACKAGE_BUGREPORT);
 	dialog.set_copyright("Copyright (C) 2014 David Ricart");
-	dialog.set_license("This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA");
+	dialog.set_license("This program is free software; you can redistribute it and/or "
+		"modify it under the terms of the GNU General Public License as published by the "
+		"Free Software Foundation; either version 2 of the License, or (at your option) "
+		"any later version.\n\nThis program is distributed in the hope that it will be "
+		"useful, but WITHOUT ANY WARRANTY; without even the implied warranty of "
+		"MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public "
+		"License for more details.\n\nYou should have received a copy of the GNU General "
+		"Public License along with this program; if not, write to the Free Software "
+		"Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA");
 	dialog.set_wrap_license(true);
 
 	dialog.run();
@@ -230,7 +238,7 @@ void MainWindow::on_about()
 void MainWindow::on_preferences()
 {
 	if (Preferences::instance(*this) == Gtk::RESPONSE_OK)
-		m_treeview.set_opts();
+		m_treeview.reset_opts();
 }
 
 
