@@ -1,12 +1,21 @@
 SVN
 ---
 
-	+ New command line option --logdir for porgball.
+	Changes in porg:
+
 	+ Bugfix: porg erroniously complained about command line option
 	  incompatibility when some options were doubled (like in -rr).
 	+ Added section 'FILE NAMES WITH SPACES' to the man page of porg.
 	  Reading it is recommended.
 	+ Removed path /etc/mtab from the default EXCLUDE.
+
+	Changes in grop:
+
+	Changes in scripts:
+
+	+ New command line options --no-porg-suffix and --logdir for porgball.
+	+ Let porgball extract files from ordinary tarballs (without suffix
+	  '.porg' in their names).
 
 
 Version 0.5 (11 June 2014)
